# RedisLockInventory

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  alembic.ini  debug_locust.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  quick_fix_stock.py  test_product_creation.py  test_purchase.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2d050e6db4fc_initial_tables_users_products_purchases.py  50de79cbcacf_update_product_model_replace_initial_.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  security.py
app/db/: __init__.py  database.py  redis_client.py
app/models/: __init__.py  product.py  purchase.py  user.py
app/schemas/: __init__.py  auth.py  inventory.py
app/services/: __init__.py  auth_service.py  inventory_service.py  product_service.py  purchase_service.py  redlock_aioredlock_service.py  redlock_manual_service.py  redlock_service.py
docs/: ARCHITECTURE.md  PERFORMANCE_TEST.md  REDLOCK_DESIGN.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md
load_tests/: README.md  __init__.py  locustfile.py  run_v1_tests.sh  setup_test_data.py
load_tests/v1_basic/: README.md  locustfile.py  setup.py
load_tests/v1_stress/: README.md  locustfile.py  setup.py
load_tests/v3_redlock_aioredlock/: README.md  locustfile.py  setup.py
load_tests/v3_redlock_manual/: README.md  locustfile.py  setup.py
tests/: conftest.py  test_redlock.py
tests/api/: __init__.py  test_auth_api.py  test_inventory_api.py
tests/core/: __init__.py  test_config.py  test_security.py
(+15 files in other folders)
